--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
   </properties>
 
 
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>5.2.0.RELEASE</version>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
      <plugin>
